# DONNA

./: .env.example  .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
api/: index.py
api/utils/: company_metadata.py  contextual_llm.py  db_init.py  generator.py  ingestor.py  prompt.py  retriever.py  stream.py  tools.py
app/: globals.css  layout.tsx  page.tsx
app/case/: page.tsx
app/case/[id]/: page.tsx
app/create/: page.tsx
company_data/autoscaling_tech/: complete.json  sprint_1.json  sprint_2.json  sprint_3.json  sprint_4.json  sprint_5.json  sprint_6.json
company_data/database_solutions/: complete.json  sprint_1.json  sprint_2.json  sprint_3.json  sprint_4.json  sprint_5.json  sprint_6.json
company_data/distributed_apps/: complete.json  sprint_1.json  sprint_2.json  sprint_3.json  sprint_4.json  sprint_5.json  sprint_6.json
company_data/storage_systems/: complete.json  sprint_1.json  sprint_2.json  sprint_3.json  sprint_4.json  sprint_5.json  sprint_6.json
components/chat/: chat-history.tsx  chat-input.tsx  chat-interface.tsx
components/layout/: suggestions-panel.tsx  summary-panel.tsx
components/ui/: case-card.tsx  donna-logo.tsx  identity-modal.tsx  sheet.tsx
hooks/: use-chat.ts  use-identity.ts
lib/: chat-api.ts  session-storage.ts
