[project]
name = "donna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "google>=3.0.0",
    "google-genai>=1.52.0",
    "ollama>=0.6.1",
    "openai>=2.8.1",
    "pymongo>=4.15.4",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.16.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
